[metadata]
name = punchbox
author = Peter Savage
author-email = psavage@redhat.com
summary = A system for producing musicbox templates
description-file = README.md
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Utilities
keywords =
    setup
    distutils

[files]
packages =
    punchbox

[flake8]
ignore = E128,E811
max-line-length = 100
